fix contrast of button on contact us page LEARNER-5867

--- a/lms/static/sass/views/_support.scss
+++ b/lms/static/sass/views/_support.scss
@@ -216,12 +216,6 @@
     border: 1px solid $blue;
     border-radius: 3px;
     color: $blue;
-
-    &:hover,
-    &:focus {
-      color: $blue;
-      background-color: $mediumGrey !important;
-    }
   }
 
   .label-course {
